--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "jest": "^29.7.0",
+    "jsdom": "^22.1.0",
     "tailwindcss": "^3.4.3"
   }
 }
